--- a/UIcodeWeb/frontend/index.html
+++ b/UIcodeWeb/frontend/index.html
@@ -25,7 +25,7 @@
         overflow-x: hidden;
       }
 
-      /* NAVBAR STYLE (Layout Kiri - Kanan) */
+      /* NAVBAR */
       nav {
         background: rgba(24, 24, 27, 0.9);
         backdrop-filter: blur(12px);
@@ -112,21 +112,18 @@
         box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
         cursor: default;
       }
-
       .nav-item:hover .dropdown-menu {
         opacity: 1;
         visibility: visible;
         transform: translateY(0);
       }
 
-      /* Grid Kategori di Dropdown */
       .cat-grid {
         flex: 2;
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 8px;
       }
-
       .cat-item {
         display: flex;
         justify-content: space-between;
@@ -139,7 +136,6 @@
         transition: 0.2s;
         border: 1px solid transparent;
       }
-
       .cat-item:hover {
         background: #1e1e24;
         color: white;
@@ -343,36 +339,7 @@
         font-family: "Outfit", sans-serif;
       }
 
-      .category-chips {
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        flex-wrap: wrap;
-      }
-      .chip {
-        background: transparent;
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        color: var(--text-muted);
-        padding: 8px 18px;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: 0.3s;
-        font-size: 0.9rem;
-        font-family: "Outfit", sans-serif;
-      }
-      .chip:hover {
-        border-color: white;
-        color: white;
-      }
-      .chip.active {
-        background: var(--primary);
-        color: black;
-        border-color: var(--primary);
-        font-weight: bold;
-        box-shadow: 0 0 15px rgba(0, 255, 117, 0.4);
-      }
-
-      /* GRID & CARD */
+      /* --- GRID & CARD (INTERAKTIF + LIKE FLOATING) --- */
       .container {
         max-width: 1200px;
         margin: 0 auto;
@@ -380,48 +347,32 @@
       }
       .grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
         gap: 30px;
       }
 
       .card {
         background: var(--card-bg);
-        border-radius: 20px;
+        border-radius: 16px;
         overflow: hidden;
         border: 1px solid rgba(255, 255, 255, 0.05);
         transition: 0.4s ease;
         display: flex;
         flex-direction: column;
         position: relative;
+        height: 280px;
       }
+
       .card:hover {
-        transform: translateY(-10px);
-        border-color: rgba(255, 255, 255, 0.2);
-        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+        transform: translateY(-5px);
+        border-color: var(--primary);
+        box-shadow: 0 10px 30px rgba(0, 255, 117, 0.15);
       }
 
-      .btn-delete {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background: rgba(0, 0, 0, 0.8);
-        color: #ff4757;
-        border: 1px solid #ff4757;
-        padding: 6px 12px;
-        border-radius: 8px;
-        font-size: 0.75rem;
-        font-weight: bold;
-        cursor: pointer;
-        z-index: 10;
-        backdrop-filter: blur(4px);
-      }
-      .btn-delete:hover {
-        background: #ff4757;
-        color: white;
-      }
-
+      /* Preview Area */
       .card-preview {
-        height: 200px;
+        width: 100%;
+        height: 100%;
         background-color: #000;
         background-image: linear-gradient(#1a1a1a 1px, transparent 1px),
           linear-gradient(90deg, #1a1a1a 1px, transparent 1px);
@@ -429,7 +380,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        position: relative;
       }
       .shadow-host {
         width: 100%;
@@ -439,91 +390,127 @@
         align-items: center;
       }
 
-      .card-info {
-        padding: 20px;
-      }
-      .card-category {
-        font-size: 0.75rem;
-        color: var(--primary);
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        font-weight: 800;
-        display: block;
-        margin-bottom: 5px;
-      }
-      .card-meta {
-        font-size: 0.9rem;
-        color: var(--text-muted);
+      /* OVERLAY GET CODE (KANAN BAWAH) */
+      .card-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: transparent;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
+        align-items: flex-end;
+        padding: 15px;
+        box-sizing: border-box;
+        opacity: 0;
+        transition: 0.3s ease;
+        z-index: 20;
+        pointer-events: none; /* Tembus Klik */
+      }
+      .card:hover .card-overlay {
+        opacity: 1;
       }
 
-      .card-actions {
+      .btn-get-code {
+        padding: 8px 20px;
+        background: var(--primary);
+        color: black;
+        font-weight: 800;
+        font-size: 0.9rem;
+        border: none;
+        border-radius: 12px;
+        cursor: pointer;
+        transform: translateY(10px);
+        transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         display: flex;
         align-items: center;
-        margin-top: 15px;
-        gap: 12px;
-        padding-top: 15px;
-        border-top: 1px solid rgba(255, 255, 255, 0.05);
+        gap: 8px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        pointer-events: auto;
       }
-      .btn-copy {
-        background: rgba(255, 255, 255, 0.05);
-        color: white;
+      .card:hover .btn-get-code {
+        transform: translateY(0);
+      }
+      .btn-get-code:hover {
+        background: white;
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+      }
+
+      /* --- TOMBOL FLOATING --- */
+
+      /* Tombol Delete Admin (Pojok Kanan Atas) */
+      .btn-delete {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: rgba(255, 71, 87, 0.9);
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border: none;
-        border-radius: 8px;
-        padding: 10px;
         cursor: pointer;
-        transition: 0.2s;
-        font-size: 0.85rem;
-        font-weight: 600;
-        flex: 1;
-        font-family: "Outfit", sans-serif;
+        z-index: 30;
+        color: white;
+        font-weight: bold;
+        opacity: 0;
+        transition: 0.3s;
+        pointer-events: auto;
       }
-      .btn-copy:hover {
+      .card:hover .btn-delete {
+        opacity: 1;
+      }
+
+      /* Tombol Like Floating (Pojok Kiri Atas) */
+      .btn-like-float {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        background: rgba(30, 30, 35, 0.8);
+        backdrop-filter: blur(4px);
+        padding: 5px 10px;
+        border-radius: 50px;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        color: #aaa;
+        cursor: pointer;
+        z-index: 30;
+        transition: 0.3s;
+        pointer-events: auto;
+      }
+      .btn-like-float:hover {
         background: white;
         color: black;
       }
 
-      .btn-like {
-        background: rgba(255, 71, 87, 0.1);
-        border: none;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 6px;
-        color: #ff4757;
-        font-size: 0.9rem;
-        transition: 0.3s;
-        padding: 8px 12px;
-        border-radius: 8px;
-        font-weight: bold;
-      }
-      .btn-like:hover {
-        background: rgba(255, 71, 87, 0.2);
-        transform: scale(1.05);
-      }
-      .btn-like svg {
-        width: 20px;
-        height: 20px;
+      .btn-like-float svg {
+        width: 16px;
+        height: 16px;
         fill: none;
         stroke: currentColor;
         stroke-width: 2;
-        transition: 0.3s;
       }
-      .btn-like.liked {
-        background: #ff4757;
-        color: white;
-        box-shadow: 0 0 10px rgba(255, 71, 87, 0.5);
+
+      .btn-like-float.liked {
+        color: #ff4757;
+        border-color: rgba(255, 71, 87, 0.3);
+        background: rgba(255, 71, 87, 0.1);
       }
-      .btn-like.liked svg {
-        fill: white;
+      .btn-like-float.liked svg {
+        fill: #ff4757;
         stroke: none;
-        transform: scale(1.2);
       }
-      .btn-like:disabled {
-        opacity: 0.5;
-        cursor: not-allowed;
-        transform: none;
+
+      .like-count {
+        font-size: 0.8rem;
+        font-weight: bold;
       }
 
       #loading {
@@ -552,7 +539,6 @@
     <nav>
       <div class="nav-left-group">
         <a href="#" class="brand">UI<span>CODE</span></a>
-
         <div class="nav-menu">
           <div class="nav-item">
             Elements
@@ -564,91 +550,79 @@
             >
               <path d="M6 9l6 6 6-6" />
             </svg>
-
             <div class="dropdown-menu">
               <div class="cat-grid">
                 <a
                   href="#"
                   onclick="filterCategory('All', this)"
                   class="cat-item"
+                  ><div class="cat-name">📖 All</div>
+                  <div class="cat-count" id="count-all">0</div></a
                 >
-                  <div class="cat-name">📖 All</div>
-                  <div class="cat-count" id="count-all">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Button', this)"
                   class="cat-item"
+                  ><div class="cat-name">▶ Buttons</div>
+                  <div class="cat-count" id="count-Button">0</div></a
                 >
-                  <div class="cat-name">▶ Buttons</div>
-                  <div class="cat-count" id="count-Button">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Checkbox', this)"
                   class="cat-item"
+                  ><div class="cat-name">☑ Checkboxes</div>
+                  <div class="cat-count" id="count-Checkbox">0</div></a
                 >
-                  <div class="cat-name">☑ Checkboxes</div>
-                  <div class="cat-count" id="count-Checkbox">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Toggle', this)"
                   class="cat-item"
+                  ><div class="cat-name">🔛 Toggle switches</div>
+                  <div class="cat-count" id="count-Toggle">0</div></a
                 >
-                  <div class="cat-name">🔛 Toggle switches</div>
-                  <div class="cat-count" id="count-Toggle">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Card', this)"
                   class="cat-item"
+                  ><div class="cat-name">📄 Cards</div>
+                  <div class="cat-count" id="count-Card">0</div></a
                 >
-                  <div class="cat-name">📄 Cards</div>
-                  <div class="cat-count" id="count-Card">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Loader', this)"
                   class="cat-item"
+                  ><div class="cat-name">⏳ Loaders</div>
+                  <div class="cat-count" id="count-Loader">0</div></a
                 >
-                  <div class="cat-name">⏳ Loaders</div>
-                  <div class="cat-count" id="count-Loader">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Input', this)"
                   class="cat-item"
+                  ><div class="cat-name">⌨ Inputs</div>
+                  <div class="cat-count" id="count-Input">0</div></a
                 >
-                  <div class="cat-name">⌨ Inputs</div>
-                  <div class="cat-count" id="count-Input">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Radio', this)"
                   class="cat-item"
+                  ><div class="cat-name">🔘 Radio buttons</div>
+                  <div class="cat-count" id="count-Radio">0</div></a
                 >
-                  <div class="cat-name">🔘 Radio buttons</div>
-                  <div class="cat-count" id="count-Radio">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Form', this)"
                   class="cat-item"
+                  ><div class="cat-name">📝 Forms</div>
+                  <div class="cat-count" id="count-Form">0</div></a
                 >
-                  <div class="cat-name">📝 Forms</div>
-                  <div class="cat-count" id="count-Form">0</div>
-                </a>
                 <a
                   href="#"
                   onclick="filterCategory('Other', this)"
                   class="cat-item"
+                  ><div class="cat-name">🔮 Other</div>
+                  <div class="cat-count" id="count-Other">0</div></a
                 >
-                  <div class="cat-name">🔮 Other</div>
-                  <div class="cat-count" id="count-Other">0</div>
-                </a>
               </div>
-
               <div class="promo-card">
                 <div class="promo-title">Join Community! 🚀</div>
                 <div class="promo-desc">
@@ -662,7 +636,6 @@
               </div>
             </div>
           </div>
-
           <div class="nav-item">Challenges</div>
           <div class="nav-item">Spotlight</div>
         </div>
@@ -749,11 +722,6 @@
 
       function filterCategory(cat, btn) {
         currentCategory = cat;
-        document
-          .querySelectorAll(".chip")
-          .forEach((c) => c.classList.remove("active"));
-        if (btn && btn.classList.contains("chip")) btn.classList.add("active");
-
         fetchFeed();
       }
 
@@ -799,13 +767,10 @@
         try {
           const response = await fetch(`${API_URL}/stats/categories`);
           const data = await response.json();
-
-          // Helper function to safe update
           const update = (id, val) => {
             const el = document.getElementById(id);
             if (el) el.innerText = val || 0;
           };
-
           update("count-all", data.All);
           update("count-Button", data.Button);
           update("count-Checkbox", data.Checkbox);
@@ -821,47 +786,62 @@
         }
       }
 
-      // 6. RENDER CARD
+      // ============================
+      // 6. RENDER CARD (MINIMALIS + LIKE)
+      // ============================
       function createCard(item) {
         const card = document.createElement("div");
         card.className = "card";
-        const deleteBtn =
+
+        // Tombol Admin Delete
+        const deleteButtonHTML =
           currentUserRole === "admin"
-            ? `<button class="btn-delete" onclick="deleteItem(${item.id})">🗑 Delete</button>`
+            ? `<button class="btn-delete" title="Hapus" onclick="event.stopPropagation(); deleteItem(${item.id})">🗑</button>`
             : "";
+
+        // Status Like
         const likeClass = item.liked_by_me ? "liked" : "";
 
         card.innerHTML = `
-          ${deleteBtn}
-          <div class="card-preview"><div class="shadow-host"></div></div>
-          <div class="card-info">
-            <span class="card-category">${item.category}</span>
-            <div class="card-meta">
-              <span>By: ${item.owner ? item.owner.username : "Unknown"}</span>
-            </div>
-            <div class="card-actions">
-              <button class="btn-copy" onclick="copyCode('${
-                item.id
-              }')">📋 Copy Code</button>
-              <button class="btn-like ${likeClass}" id="like-btn-${
-          item.id
-        }" onclick="toggleLike(${item.id})">
+            ${deleteButtonHTML}
+            
+            <button class="btn-like-float ${likeClass}" id="like-btn-${item.id}" onclick="event.stopPropagation(); toggleLike(${item.id})">
                 <svg viewBox="0 0 24 24"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
-                <span class="like-count" id="like-count-${item.id}">${
-          item.likes_count
-        }</span>
-              </button>
+                <span class="like-count" id="like-count-${item.id}">${item.likes_count}</span>
+            </button>
+
+            <div class="card-preview">
+                <div class="shadow-host"></div>
             </div>
-            <textarea id="code-${item.id}" style="display:none;">${
-          item.html_code
-        }\n\n/* CSS */\n${item.css_code}</textarea>
-          </div>
+
+            <div class="card-overlay">
+                <button class="btn-get-code" onclick="openDetail(${item.id})">
+                    <span>Get Code</span>
+                    <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
+                </button>
+            </div>
         `;
+
         grid.appendChild(card);
 
+        // Shadow DOM (Render UI Asli)
         const host = card.querySelector(".shadow-host");
         const shadow = host.attachShadow({ mode: "open" });
-        shadow.innerHTML = `<style>:host { display:flex; justify-content:center; align-items:center; width:100%; height:100%; } ${item.css_code}</style>${item.html_code}`;
+
+        // Kita inject CSS reset agar tampilan di tengah
+        shadow.innerHTML = `
+            <style>
+                :host { display:flex; justify-content:center; align-items:center; width:100%; height:100%; overflow: hidden; }
+                ${item.css_code}
+            </style>
+            ${item.html_code}
+        `;
+      }
+
+      // --- FUNGSI NAVIGASI KE DETAIL (Placeholder) ---
+      function openDetail(id) {
+        // Arahkan ke halaman detail.html dengan membawa ID
+        window.location.href = `detail.html?id=${id}`;
       }
 
       // ACTIONS
@@ -872,16 +852,10 @@
           headers: { Authorization: `Bearer ${token}` },
         });
         fetchFeed();
-        updateCategoryCounts(); // Refresh angka di menu
+        updateCategoryCounts();
       }
 
-      function copyCode(id) {
-        navigator.clipboard.writeText(
-          document.getElementById(`code-${id}`).value
-        );
-        alert("Kode berhasil disalin!");
-      }
-
+      // FUNGSI LIKE (DIKEMBALIKAN)
       async function toggleLike(id) {
         if (!token) return alert("Login dulu untuk Like!");
         const btn = document.getElementById(`like-btn-${id}`);
@@ -919,7 +893,7 @@
 
       // START APP
       fetchFeed();
-      updateCategoryCounts(); // Ambil statistik angka menu
+      updateCategoryCounts();
     </script>
   </body>
 </html>
